
  - internal-ish classes like ClauseElement, FromClause, NullTypeEngine, etc.,
    are also no longer imported into your namespace

  - the 'Smallinteger' compatiblity name (small i!) is no longer imported, but
    remains in schema.py for now.  SmallInteger (big I!) is still imported.

- Fix to bind param processing such that "False" values (like blank strings)
  still get processed/encoded.

- Added a "legacy" adapter to types, such that user-defined TypeEngine
  and TypeDecorator classes which define convert_bind_param() and/or
  convert_result_value() will continue to function.  Also supports
  calling the super() version of those methods.
  
- Added session.prune(), trims away instances cached in a session that
  are no longer referenced elsewhere. (A utility for strong-ref
  identity maps).

- Added close() method to Transaction.  Closes out a transaction using
  rollback if it's the outermost transaction, otherwise just ends
  without affecting the outer transaction.

- Transactional and non-transactional Session integrates better with
  bound connection; a close() will ensure that connection
  transactional state is the same as that which existed on it before
  being bound to the Session.

- Modified SQL operator functions to be module-level operators,
  allowing SQL expressions to be pickleable. [ticket:735]

- Small adjustment to mapper class.__init__ to allow for Py2.6
  object.__init__() behavior.

- Fixed 'prefix' argument for select()

- Connection.begin() no longer accepts nested=True, this logic is now
  all in begin_nested().
    
0.4.0beta3
----------

- SQL types optimization:

  - New performance tests show a combined mass-insert/mass-select test as
    having 68% fewer function calls than the same test run against 0.3.

  - General performance improvement of result set iteration is around 10-20%.

  - In types.AbstractType, convert_bind_param() and convert_result_value()
    have migrated to callable-returning bind_processor() and